# PokeScript

./: .gitignore  LICENSE  Makefile  README.md  blender.py  blender2.py  blender6.py  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.js
daemon/: atom.sh  download.sh
src/: App.vue  main.js
src/components/: Page.vue  Plot.vue  Plot2.vue
static/: index-DAz5q0CT.css
templates/: index.html
