[project]
name = "arm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "pandas>=2.2.3",
    "pendulum>=3.0.0",
    "plotly>=6.0.0",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
    "urllib3<2.0",
]
